Font & z-index fix.

--- a/source/assets/stylesheets/application.css.sass
+++ b/source/assets/stylesheets/application.css.sass
@@ -46,6 +46,11 @@ body
         text-decoration: none
         &:hover
           color: #2dbd9a
+  .bigbang
+    position: relative
+    z-index: 9
+  .stage-assets
+    z-index: 1
   .slogan
     color: #fff
     font-family: 'Open Sans', sans-serif
@@ -55,9 +60,8 @@ body
       padding-top: 50px
       line-height: 45px
       letter-spacing: 1px
-    h4
-      line-height: 30px
-      letter-spacing: 1.5px
+    h3
+      line-height: 35px
   .join .btn-lg
     font-size: 1.8em
     padding: 15px 40px
